[package]
name = "obmrs"
version = "0.1.0"
edition = "2021"
description = "As a participant, you will create a structure to receive and hold the exchange-distributed order book. This structure will be called the OrderBoard, and will hold the order book's bids and asks as a price-sorted map, input and output. It will store aggregates against prices, not individual orders against prices."
readme = "README.md"
authors = ["_numbp"]
documentation = "https://docs.rs/obmrs/0.1.0"
repository = "https://github.com/go-numb/obmrs"
license = "MIT"
license-file = "LICENSE"
keywords = ["orderbook", "exchange", "market", "order", "book"]


[dependencies]
rand = "0.8.5"
rayon = "1.10.0"
rust_decimal = { version = "1.36.0", features = ["maths"] }
